This file documents the revision history for the Monitoring Webinterface Thruk.

1.1.0    Sun Aug 21 19:12:18 CEST 2011
          - availability / trends are now calculated in a background process
            - less ressources and independent from browser ttl
          - added config option 'show_custom_vars'
          - added host command 'Schedule downtime for all services on this host'
          - added excel export for notifications
          - fixed disappearing menu item name (fixes #45)
          - fixed changing views on the minemap (fixes #44)

1.0.9    Sun Aug 14 12:47:30 CEST 2011
          - delete multiple comments from the comments page
          - delete multiple downtimes from the downtimes page
          - new option command_reschedule_alias to redirect reschedule requests to agent services
          - themes: themes can be enabled/disabled by themes/themes-enabled directory (just like plugins)
          - pnp preview: save graph state between reloads
          - shinken features: save status of businessview on reload
          - Thruk theme: layout/design cleanup
          - moved mobile plugin to extra branch (not finished yet)
          - fixed undefined value in shinken-features plugin
          - fixed "select all with downtime" button for hosts (fixes #39)
          - fixed calendar not showing up in status filter (fixes #42)
          - fixed authorization for service downtimes (fixes #43)

1.0.8    Mon Aug  2 15:22:16 CEST 2011
          - added excel export for all logfile pages
          - added "view configuration" link in host/service extinfo page
          - added contacts to host/service config page
          - added icons to command seletion
          - added mine map plugin
          - improved input validation for date fields in quick commands
          - added IE9 compatibility mode (Joerg Linge)
          - added description to init script (fixes #32)
          - fixed scheduling downtimes on mutliple backends (fixes #33)