@@ -100,16 +100,19 @@ sub index :Path :Args(0) :MyAction('AddDefaults') {
         $order = "ASC";
     }
 
-    $c->stats->profile(begin => "notifications::fetch");
-    $c->{'db'}->get_logs(filter => [$total_filter, Thruk::Utils::Auth::get_auth_filter($c, 'log')], sort => {$order => 'time'}, pager => $c);
-    $c->stats->profile(end => "notifications::fetch");
 
     if( defined $c->{'request'}->{'parameters'}->{'view_mode'} and $c->{'request'}->{'parameters'}->{'view_mode'} eq 'xls' ) {
-        Thruk::Utils::Status::set_selected_columns($c);
-        my $filename = 'notifications.xls';
-        $c->res->header( 'Content-Disposition', qq[attachment; filename="] . $filename . q["] );
-        $c->stash->{'template'} = 'excel/notifications.tt';
-        return $c->detach('View::Excel');
+        $c->stash->{'template'}   = 'excel/notifications.tt';
+        $c->stash->{'file_name'}  = 'notifications.xls';
+        $c->stash->{'log_filter'} = { filter => [$total_filter, Thruk::Utils::Auth::get_auth_filter($c, 'log')],
+                                      sort   => {$order => 'time'},
+                                    };
+        my $id = Thruk::Utils::External::perl($c, 'Thruk::Utils::logs2xls($c)');
+        return $c->redirect($c->stash->{'url_prefix'}."thruk/cgi-bin/job.cgi?job=".$id);
+    } else {
+        $c->stats->profile(begin => "notifications::fetch");
+        $c->{'db'}->get_logs(filter => [$total_filter, Thruk::Utils::Auth::get_auth_filter($c, 'log')], sort => {$order => 'time'}, pager => $c);
+        $c->stats->profile(end => "notifications::fetch");
     }
 
     $c->stash->{oldestfirst}      = $oldestfirst;
